# glados-auto-checkin

./: .gitignore  README.md  README_EN.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: FAQ.md  QUICK_START.md  TROUBLESHOOTING.md
src/glados_auto_checkin/: __init__.py  browser.py  cli.py  config.py  logging_utils.py  mailer.py  runner.py  scheduler.py  state.py  wizard.py
tests/: test_config.py  test_scheduler.py
